[package]
name = "get-vsix"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
openssl = { version = "0.10", features = ["vendored"] }
